--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
     <% messages.forEach(message => { %>
         <div class="message">
             <h1> <%=message.user%> </h1>
-            <h2> <%=message.date%> </h2>
+            <h2> <%=message.added%> </h2>
             <p> <%=message.text%> </p>
         </div>
     <% }) %>
