--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,12 +1,12 @@
 <form method="POST" action="/new">
     <h1>Input Info</h1>
     <div>
-        <h2>Author name:</h2>
+        <h2>Author Name:</h2>
         <input type="text" name="author">
     </div>
 
     <div>
-        <h2> name:</h2>
+        <h2> Message:</h2>
         <input type="text" name="text">
     </div>
 
