--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,5 @@
-<% if(messages && messages.length > 0) { %>
-    <% messages.forEach(message => { %>
-        <div class="message">
-            <h1> <%=message.user%> </h1>
-            <h2> <%=message.added%> </h2>
-            <p> <%=message.text%> </p>
-        </div>
-    <% }) %>
-<% } %>
+<h1>Message Manager</h1>
+<div>
+    <a href="/messages"><button type="button">View Messages</button>
+    <a href="/messages"><button type="button">Create New Message</button>
+</div>
